fixing main page project spacing

--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ form button {
     padding: 2em;
     box-shadow: 0 0 4px lightslategray;
     border-radius: 10px;
-    margin-block: 2rem;
+    margin-block: 1rem;
 }
 
 .projects article {
